--- a/styles/home.css
+++ b/styles/home.css
@@ -26,6 +26,7 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
+    padding-top: 2vh;
 }
 
 #menu img {
