--- a/styles/home.css
+++ b/styles/home.css
@@ -15,14 +15,15 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    position: relative;
+    position: fixed;
+    top: 0;
 }
 
 #menu {
-    position: absolute;
+    position: relative;
     width: 100vw;
     z-index: 1;
-    height: 100%;
+    height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
@@ -53,11 +54,15 @@ body {
         transform: scale(0.6); /* Shrink to 50% of original size */
     }
 
+    #menu {
+        
+    }
+
     #menu div {
         background-color: black;
         padding-bottom: 14px;
+        padding-left: 14px;
         overflow-y: auto;
-        margin-right: 40vh;
-        width: 600px;
+        width: 800px;
     }
 }
